fixed sold out and alignment

--- a/src/components/Settings/Menu/Menu.module.css
+++ b/src/components/Settings/Menu/Menu.module.css
@@ -25,28 +25,35 @@
 }
 
 .logout-btn {
+    margin-top: 3rem;
     cursor: pointer;
     transition: all 0.1s !important;
     color: red;
-    padding: 0.5rem;
-    border: 1px solid red;
-    border-radius: 0.25rem;
+    /* padding: 0.5rem; */
+    /* border: 1px solid red; */
+    /* border-radius: 0.25rem; */
     width: 100px;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    /* padding-left: 1rem; */
+    font-family: 'Din Mittelschrift';
+    font-size: 14pt;
+    /* padding-right: 1rem; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     
 }
-.logout-btn:hover {
-    color: black;
-    border-color: black;
+.logout-btn p {
+    font-size: 14pt;
 
 }
+
+.logout-btn:hover {
+    color: rgb(0, 0, 0);
+}
+
 
 .logout-btn svg {
     transition: all 0.1s !important;
